@@ -1,3 +1,9 @@
+2007-02-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-cache.el (tramp-flush-file-function): Renamed from
+	`tramp-cache-before-revert-function'.  Added to
+	`kill-buffer-hook'.
+
 2007-01-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-smb.el (tramp-smb-handle-insert-directory)
